[package]
name = "rust_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["web_server", "sql_container_impl"]

[dependencies]
async-trait = "0.1.64"
tokio = "1.25.0"
ring = { version = "0.16.20", default-features=false }
base64 = "0.21.0"
uuid = { version = "1.3.0", default-features = false }