[package]
name = "sql_container_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_impl = { path = ".." }
sqlx = { version = "0.6.2" }
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
async-trait = "0.1.64"
[features]