[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_impl = { path = ".." }
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "sqlite", "postgres"] }
tokio = { version = "1.25.0", features  = ["macros"] }
sql_container_impl = { path = "../sql_container_impl" }
uuid = "1.3.0"
axum = "0.6.9"
serde = "1.0.152"